<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.latrodectus.bkplayer.view.Detail_Screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/detail_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/albumArtThumbLayout"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:background="@android:color/transparent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/albumArtThumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/album_art_thumbnail"
                        android:src="@drawable/music" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/trackInfoBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/transparent"
                    android:baselineAligned="false"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/track_title"
                        android:textColor="#FFFFFF"
                        android:textIsSelectable="false"
                        android:textSize="18sp"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/artistBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/artist_name"
                        android:textColor="#FFFFFF"
                        android:textIsSelectable="false"
                        android:textSize="12sp"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/albumBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/album_name"
                        android:textColor="#FFFFFF"
                        android:textIsSelectable="false"
                        android:textSize="12sp"
                        android:typeface="sans" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.3"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/playing_from"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:typeface="sans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="7dp" />

                <TextView
                    android:id="@+id/playingFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/music_library"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:typeface="sans" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/albumArtLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/albumArt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/album_art"
                android:src="@drawable/default_album_art" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <SeekBar
                    android:id="@+id/songProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="5dp"
                    android:paddingEnd="0dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingStart="0dp"
                    android:progressDrawable="@drawable/seekbar_progress"
                    android:splitTrack="false"
                    android:thumb="@drawable/ic_seekbar_thumb_red_18dp"
                    android:thumbPosition="midpoint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/transparent"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/timeElapsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="start|center_vertical"
                    android:text="@string/time_zero"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/filler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="" />

                <TextView
                    android:id="@+id/trackDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="end|center_vertical"
                    android:text="@string/time_zero"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <ImageButton
                    android:id="@+id/repeatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.20"
                    android:background="@null"
                    android:contentDescription="@string/repeat_button"
                    android:src="@drawable/repeat_off" />

                <ImageButton
                    android:id="@+id/previousButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="0.20"
                    android:background="@null"
                    android:contentDescription="@string/previous_button"
                    android:src="@drawable/prev" />

                <ImageButton
                    android:id="@+id/playButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.20"
                    android:background="@null"
                    android:contentDescription="@string/play_button"
                    android:src="@drawable/play" />

                <ImageButton
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="0.20"
                    android:background="@null"
                    android:contentDescription="@string/next_button"
                    android:src="@drawable/next" />

                <ImageButton
                    android:id="@+id/shuffleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.20"
                    android:background="@null"
                    android:contentDescription="@string/shuffle_button"
                    android:src="@drawable/shuffle_off" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>